@@ -156,8 +156,12 @@ Rdiff <- function(from, to, useDiff = FALSE, forEx = FALSE, nullPointers=TRUE, L
         right <- clean2(right)
     }
     if (!useDiff && (length(left) == length(right))) {
-        bleft <- gsub("[[:space:]]+", " ", left)
-        bright <- gsub("[[:space:]]+", " ", right)
+        ## The idea is to emulate diff -b, as documented by POSIX:
+        ## http://pubs.opengroup.org/onlinepubs/9699919799/utilities/diff.html
+        bleft <- gsub("[[:space:]]*$", "", left)
+        bright <- gsub("[[:space:]]*$", "", right)
+        bleft <- gsub("[[:space:]]+", " ", bleft)
+        bright <- gsub("[[:space:]]+", " ", bright)
         if(all(bleft == bright))
             return(if(Log) list(status = 0L, out = character()) else 0L)
         cat("\n")
